# chip8-eumulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: chip8.h.DD2C62959B678FBD.idx  chip8_config.h.F8279FC3EFA06637.idx  chip8_keyboard.h.5ACD4DE89805ADFE.idx  chip8_mem.c.0156CF8D127AACF5.idx  chip8_mem.h.6E98649354DC03C7.idx  chip8_registers.h.C7C4274E2C1371FE.idx  chip8_stack.h.5847007A0D1950FD.idx  config.h.3B93FA42206C7218.idx  main.c.8F8BBAB4381B3A8F.idx
include/: chip8.h  chip8_config.h  chip8_display.h  chip8_keyboard.h  chip8_mem.h  chip8_registers.h  chip8_stack.h
src/: chip8.c  chip8_display.c  chip8_keyboard.c  chip8_keyboard.d  chip8_mem.c  chip8_mem.d  chip8_registers.c  chip8_registers.d  chip8_stack.c  chip8_stack.d  main.c  main.d
